# ChangeLog for sys-power/hibernate-script
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-power/hibernate-script/ChangeLog,v 1.71 2007/11/17 07:39:03 alonbl Exp $

*hibernate-script-1.97-r2 (17 Nov 2007)

  17 Nov 2007; Alon Bar-Lev <alonbl@gentoo.org>
  -hibernate-script-1.97-r1.ebuild, +hibernate-script-1.97-r2.ebuild:
  Add some comments regarding dependencies

  14 Nov 2007; Markus Meier <maekke@gentoo.org>
  hibernate-script-1.97-r1.ebuild:
  x86 stable, bug #198962

  14 Nov 2007; Steve Dibb <beandog@gentoo.org>
  hibernate-script-1.97-r1.ebuild:
  amd64 stable, bug 198962

  12 Nov 2007; Alon Bar-Lev <alonbl@gentoo.org>
  hibernate-script-1.95-r2.ebuild, hibernate-script-1.95-r3.ebuild,
  hibernate-script-1.96.ebuild, hibernate-script-1.96-r1.ebuild,
  hibernate-script-1.97-r1.ebuild:
  Remove logrotate USE flag, bug#198901

  03 Nov 2007; Alon Bar-Lev <alonbl@gentoo.org>
  -hibernate-script-1.97.ebuild:
  Cleanup

*hibernate-script-1.97-r1 (03 Nov 2007)

  03 Nov 2007; Alon Bar-Lev <alonbl@gentoo.org>
  +hibernate-script-1.97-r1.ebuild:
  Fix tuxonice filewriter issue, bug#197630, thanks Frittella Laurento for
  reporting

  28 Oct 2007; Alon Bar-Lev <alonbl@gentoo.org>
  files/digest-hibernate-script-1.97, Manifest:
  Update fbsplash support

*hibernate-script-1.97 (27 Oct 2007)

  27 Oct 2007; Alon Bar-Lev <alonbl@gentoo.org>
  +hibernate-script-1.97.ebuild:
  Version bump

*hibernate-script-1.96-r1 (12 Sep 2007)

  12 Sep 2007; Alon Bar-Lev <alonbl@gentoo.org>
  +hibernate-script-1.96-r1.ebuild:
  Sync some patches from upstream

*hibernate-script-1.96 (17 Jul 2007)

  17 Jul 2007; Alon Bar-Lev <alonbl@gentoo.org>
  +hibernate-script-1.96.ebuild:
  Version bump

  22 Jun 2007; Alon Bar-Lev <alonbl@gentoo.org>
  -hibernate-script-1.94-r5.ebuild:
  Cleanup

  21 Jun 2007; Christoph Mende <angelos@gentoo.org>
  hibernate-script-1.95-r2.ebuild:
  Stable on amd64 wrt bug 180645
