@@ -1,0 +1,6 @@
+MD5 a6155e1e3d145a35fa0e5c1485a7341e hibernate-script-1.97-patches-4.tar.bz2 3280
+RMD160 b1c048ef4275b5f643a0da1049315746185b1982 hibernate-script-1.97-patches-4.tar.bz2 3280
+SHA256 fd220135f7c3920fa61fecb4a240bb51fd22a5b9a606e65f3b2439ef6ab177ec hibernate-script-1.97-patches-4.tar.bz2 3280
+MD5 c3551238a2fe8bbe7b0e20322d8e02a5 hibernate-script-1.97.tar.gz 81504
+RMD160 6346a098f0892e6cffd547b0b7d042a51f298bb2 hibernate-script-1.97.tar.gz 81504
+SHA256 8374bedc80206a6708c10d9814b92bebed3d9e4966c01c2d086e9e5b5646827c hibernate-script-1.97.tar.gz 81504
