@@ -1,6 +1,12 @@
 # ChangeLog for sys-power/hibernate-script
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-power/hibernate-script/ChangeLog,v 1.71 2007/11/17 07:39:03 alonbl Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-power/hibernate-script/ChangeLog,v 1.72 2007/11/25 06:08:17 alonbl Exp $
+
+*hibernate-script-1.97-r3 (25 Nov 2007)
+
+  25 Nov 2007; Alon Bar-Lev <alonbl@gentoo.org>
+  +hibernate-script-1.97-r3.ebuild:
+  Fix X environment issue, bug#199806, thanks to Daniel Schömer
 
 *hibernate-script-1.97-r2 (17 Nov 2007)
 
